--- a/src/App.css
+++ b/src/App.css
@@ -74,21 +74,11 @@ a, ul, li{
 .navbarLink:hover{
   color: #00d8ff;
 }
-.active{
+.navbarLink.active{
   color: #fff;
   font-weight: 600;
 
 }
-/* .headerBackground{ */
-/* .backgroundImg, .headerBackground{
-  z-index: -1;
-  opacity: 0.75;
-  width: 100%;
-  height: 30rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-} */
 
 .header{
   background-image: url(./assets/techBack.jpg);
@@ -166,7 +156,16 @@ a, ul, li{
     background: #00d9ff14;
   }
 }
-
+.general{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 2rem 0;
+  gap: 1rem;
+  height: 100vh;
+}
 .skills{
   width: 100%;
   display: flex;
@@ -185,8 +184,8 @@ a, ul, li{
   align-items: flex-start;
   flex-wrap: wrap;
   width: 90%;
-  height: min-content;
-  max-height: 100vh;
+  height: fit-content;
+  /* max-height: 100vh; */
   gap: 2rem;
 }
 .skillsList div{
@@ -202,6 +201,7 @@ a, ul, li{
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  height: 2.8rem;
 }
 .skillsList p{
   font-weight: bold;
@@ -219,6 +219,30 @@ a, ul, li{
   border: none;
   border-radius: 1rem;
   height: 100%;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+/* .skillsList .animation{
+  width: 5%;
+  border-radius: 1rem;
+  background:#57bcff;
+  animation: 1s sliderAnim infinite;
+  height: 100%;
+
+} */
+
+@keyframes sliderAnim {
+  0%{
+    /* transform: translateX(2%); */
+    left: 2rem;
+  }
+
+  100%{
+    /* transform: translateX(100%); */
+    left: 10rem;
+  }
 }
 
 .skillsImage{
@@ -388,6 +412,10 @@ a, ul, li{
     justify-content: center;
     width: 100%;
   }
+  .header{
+    background-image: url(./assets/techBackalt.jpg);
+    background-size: cover;
+  }
 
   .selfImage, .pulse{
     width: calc(var(--pulse-and-image-size) - 10rem);
@@ -420,6 +448,12 @@ a, ul, li{
   }
 }
 
+@media (max-width: 700px) {
+  .skills{
+    height: fit-content;
+  }
+}
+
 
 @media (max-width: 400px) {
   .header{
@@ -432,5 +466,11 @@ a, ul, li{
   }
   .aboutBox span{
     width: 100%;
+  }
+  .skillsList .progressSlider{
+    width: 10rem;
+  }
+  .navbar .connectBtn{
+    display: none;
   }
 }
