--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@ a, ul, li{
   justify-content: flex-start;
   /* width: 60%; */
   text-align: left;
+  padding-top: 3rem;
 }
 
 .selfImageBox{
@@ -165,6 +166,17 @@ a, ul, li{
   margin: 2rem 0;
   gap: 1rem;
   height: 100vh;
+}
+
+.general{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 2rem 0;
+  gap: 1rem;
+  height: 100%;
 }
 .skills{
   width: 100%;
@@ -260,7 +272,7 @@ a, ul, li{
 .projectList{
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
   flex-wrap: wrap;
   gap: 2rem;
   width: 90%;
@@ -412,6 +424,10 @@ a, ul, li{
     justify-content: center;
     width: 100%;
   }
+  .projectList{
+    justify-content: center;
+    width: 100%;
+  }
   .header{
     background-image: url(./assets/techBackalt.jpg);
     background-size: cover;
@@ -459,6 +475,9 @@ a, ul, li{
   .header{
     flex-direction: column;
     align-items: center;
+  }
+  .headerContent{
+    padding-top: 0;
   }
   .aboutBox{
     flex-direction: column;
