--- a/src/index.css
+++ b/src/index.css
@@ -54,11 +54,13 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.35s;
 }
 button:hover {
-  border-color: /*#646cff*/#00d8ff;
-  /* color: #00d8ff; */
+  border-color: #00d8ff;
+  color: #00d8ff;
+  background: #457979;
+  box-shadow: 1px 2px 10px #6e879d;
 }
 button:focus,
 button:focus-visible {
